// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopover children is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="1"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorDownCenter testClass1 testClass2"
  data-test-subj="test subject string"
  id="0"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorClassName is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="3"
>
  <div
    class="euiPopover__anchor test"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition defaults to centerDown 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="6"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition downRight is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownRight"
  id="8"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition leftCenter is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorLeftCenter"
  id="7"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props display block is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--displayBlock"
  id="2"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props isOpen defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="9"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props isOpen renders true 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="10"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-describedby="htmlId"
          aria-live="assertive"
          aria-modal="true"
          class="euiPanel euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPopover props ownFocus defaults to false 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="11"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-describedby="htmlId"
          aria-live="assertive"
          aria-modal="true"
          class="euiPanel euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPopover props ownFocus renders true 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="12"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="1"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <div
          aria-describedby="htmlId"
          aria-live="off"
          aria-modal="true"
          class="euiPanel euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
          data-autofocus="true"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
          tabindex="0"
        >
          <div
            class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <p
            class="euiScreenReaderOnly"
            id="htmlId"
          >
            You are in a dialog. To close this dialog, hit escape.
          </p>
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPopover props panelClassName is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="13"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-describedby="htmlId"
          aria-live="assertive"
          aria-modal="true"
          class="euiPanel euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen test"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPopover props panelPaddingSize is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="14"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
      <div
        data-focus-lock-disabled="disabled"
      >
        <div
          aria-describedby="htmlId"
          aria-live="assertive"
          aria-modal="true"
          class="euiPanel euiPanel--paddingSmall euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
          role="dialog"
          style="top: 16px; left: -22px; z-index: 2000;"
        >
          <div
            class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
            style="left: 10px; top: 0px;"
          />
          <div />
        </div>
      </div>
      <div
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
</div>
`;
